--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -27,3 +27,6 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+    - name: Run script
+      run: |
+        python get-price-info.py
