--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -29,4 +29,10 @@ jobs:
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Run script
       run: |
-        python get-price-info.py
+        python get-price-info.py > price-info.json
+    - name: git operation
+      run: |
+        git --version
+        git branch
+        git checkout master
+    
