--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -23,6 +23,9 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: "3.10"
+    - name: Test for further
+      run: |
+        echo ${{ github.event.head_commit.message }}
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
@@ -33,6 +36,6 @@ jobs:
     - name: git operation
       run: |
         git --version
-        git branch
+        git pull origin
         git checkout master
     
