--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -23,17 +23,21 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: "3.10"
-    - name: Test for further
+    - name: Test should run
+      id: should_run
       run: |
-        echo ${{ github.event.head_commit.message }}
+        if [${{ github.event.head_commit.message }} == "auto update" ] then echo "true" else echo "false" fi
     - name: Install dependencies
+      if: ${{ needs.should_run.outputs == 'true' }}
       run: |
         python -m pip install --upgrade pip
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Run script
+      if: ${{ needs.should_run.outputs == 'true' }}
       run: |
         python get-price-info.py > price-info.json
     - name: git operation
+      if: ${{ needs.should_run.outputs == 'true' }}
       run: |
         git --version
         git pull origin
