--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -26,7 +26,7 @@ jobs:
     - name: Test should run
       id: should_run
       run: |
-        if [[ "${{ github.event.head_commit.message }}" == "auto update" ]]; then echo "true"; else echo "false"; fi
+        if [[ "${{ github.event.head_commit.message }}" == "auto update" ]]; then echo "false"; else echo "true"; fi
     - name: Install dependencies
       if: ${{ needs.should_run.outputs == 'true' }}
       run: |
@@ -41,5 +41,7 @@ jobs:
       run: |
         git --version
         git pull origin
-        git checkout master
+        git add price-info.json
+        git commit -m "auto update"
+        git push origin
     
