--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -26,18 +26,18 @@ jobs:
     - name: Test should run
       id: should_run
       run: |
-        if [[ "${{ github.event.head_commit.message }}" == "auto update" ]]; then echo "false"; else echo "true"; fi
+        if [[ "${{ github.event.head_commit.message }}" == "auto update" ]]; then echo "SKIPPING=false"; else echo "SKIPPING=true"; fi
     - name: Install dependencies
-      if: ${{ needs.should_run.outputs == 'true' }}
+      if: ${{ steps.should_run.outputs.SKIPPING == 'true' }}
       run: |
         python -m pip install --upgrade pip
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Run script
-      if: ${{ needs.should_run.outputs == 'true' }}
+      if: ${{ steps.should_run.outputs.SKIPPING == 'true' }}
       run: |
         python get-price-info.py > price-info.json
     - name: git operation
-      if: ${{ needs.should_run.outputs == 'true' }}
+      if: ${{ steps.should_run.outputs.SKIPPING == 'true' }}
       run: |
         git --version
         git pull origin
