--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -45,5 +45,5 @@ jobs:
         git pull origin
         git add price-info.json
         git commit -m "auto update"
-        git push origin
+        git push
     
