--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -10,7 +10,7 @@ on:
     branches: [ "dev" ]
 
 permissions:
-  contents: read
+  contents: write
 
 jobs:
   build:
@@ -36,16 +36,16 @@ jobs:
       if: ${{ steps.should_run.outputs.SKIPPING == 'true' }}
       run: |
         python get-price-info.py > price-info.json
-    # - name: git operation
-    #   if: ${{ steps.should_run.outputs.SKIPPING == 'true' }}
-    #   run: |
-    #     git add price-info.json
-    #     git commit -m "auto update"
-    #     git push
-    - uses: stefanzweifel/git-auto-commit-action@v5
+    - name: git operation
       if: ${{ steps.should_run.outputs.SKIPPING == 'true' }}
-      name: Commit and push changes
-      with:
-        commit_message: "auto update"
+      run: |
+        git add price-info.json
+        git commit -m "auto update"
+        git push
+    # - uses: stefanzweifel/git-auto-commit-action@v5
+    #   if: ${{ steps.should_run.outputs.SKIPPING == 'true' }}
+    #   name: Commit and push changes
+    #   with:
+    #     commit_message: "auto update"
         # push_options: '--force'
         # No explicit repository URL, using GITHUB_TOKEN by default 
