--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -10,7 +10,7 @@ on:
     branches: [ "dev" ]
 
 permissions:
-  contents: write
+  contents: read
 
 jobs:
   build:
@@ -39,13 +39,14 @@ jobs:
     - name: git operation
       if: ${{ steps.should_run.outputs.SKIPPING == 'true' }}
       run: |
+        git config --global user.name "github-actions[bot]"
+        git config --global user.email "github-actions[bot]@users.noreply.github.com"
         git add price-info.json
         git commit -m "auto update"
         git push
     # - uses: stefanzweifel/git-auto-commit-action@v5
-    #   if: ${{ steps.should_run.outputs.SKIPPING == 'true' }}
     #   name: Commit and push changes
     #   with:
-    #     commit_message: "auto update"
-        # push_options: '--force'
-        # No explicit repository URL, using GITHUB_TOKEN by default 
+    #     commit_message: "Automated update of browserslist-db"
+    #     push_options: '--force'
+    #     # No explicit repository URL, using GITHUB_TOKEN by default 
