--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -5,7 +5,7 @@ name: Python application
 
 on:
   schedule:
-    - cron: '38 10 * * *'
+    - cron: '47 16 * * *'
   push:
     - get-price-info.py
     - '.github/workflow/*.yml'
@@ -13,7 +13,8 @@ on:
   tags-ignore:
     - "*"
 
-
+env:
+  TZ: "Asia/Hong_Kong"
 permissions:
   contents: write
 
