--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -1,11 +1,11 @@
 # This workflow will install Python dependencies, run tests and lint with a single version of Python
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
 
-name: Python application
+name: Daily Build
 
 on:
   schedule:
-    - cron: '50 1 * * *'
+    - cron: '11 20 * * *'
   push:
     branches: [ "master" ]
     tags-ignore:
